package org.example.savory.api.model.entity;

//@Entity
//@Getter @Setter
//class Category {
//
//  @Id
//  @GeneratedValue(strategy = GenerationType.IDENTITY)
//  Long id;
//  String name;
//  List<Recipe> recipes;
//
//}
