package org.example.savory.api.model.entity;

//@Entity
//@Getter @Setter
//class Tag {
//
//  @Id
//  @GeneratedValue(strategy = GenerationType.IDENTITY)
//  Long id;
//  String name;
//  List<Recipe> recipes;
//
//}
